updated and applied spotless with AOSP style